--- a/home.twig
+++ b/home.twig
@@ -16,11 +16,11 @@
 					'showTitle': false,
 					'crop': true,
 					'images': [
-						{'imageHeight':'auto', 'imageWidth':'100%', 'url':asset('/images/tietheknot-feature1.jpg', 'title':'lorum ipsum',
+						{'imageHeight':'auto', 'imageWidth':'100%', 'url':asset('/images/tietheknot-feature1.jpg'), 'title':'lorum ipsum',
 						 'description': 'lorum ipsum'},
-						 {'imageHeight':'auto', 'imageWidth':'100%', 'url':asset('/images/tietheknot-feature1.jpg', 'title':'lorum ipsum',
+						 {'imageHeight':'auto', 'imageWidth':'100%', 'url':asset('/images/tietheknot-feature1.jpg'), 'title':'lorum ipsum',
 						 'description': 'lorum ipsum'},
-						 {'imageHeight':'auto', 'imageWidth':'100%', 'url':'url':asset('/images/tietheknot-feature1.jpg', 'title':'lorum ipsum',
+						 {'imageHeight':'auto', 'imageWidth':'100%', 'url':'url':asset('/images/tietheknot-feature1.jpg'), 'title':'lorum ipsum',
 						 'description': 'lorum ipsum'}
 
 					]
