More home.twig fixes

--- a/home.twig
+++ b/home.twig
@@ -20,7 +20,7 @@
 						 'description': 'lorum ipsum'},
 						 {'imageHeight':'auto', 'imageWidth':'100%', 'url':asset('/images/tietheknot-feature1.jpg'), 'title':'lorum ipsum',
 						 'description': 'lorum ipsum'},
-						 {'imageHeight':'auto', 'imageWidth':'100%', 'url':'url':asset('/images/tietheknot-feature1.jpg'), 'title':'lorum ipsum',
+						 {'imageHeight':'auto', 'imageWidth':'100%', 'url':asset('/images/tietheknot-feature1.jpg'), 'title':'lorum ipsum',
 						 'description': 'lorum ipsum'}
 
 					]
