Line height feature fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -143,7 +143,8 @@ blockquote p {
 				color: @font-swatch8-color;
 				font-weight: @font-swatch8-font-weight;
 				line-height: @font-swatch8-line-height;
-				@media @mobile {
+				line-height: 80px;
+				@media @tablet {
 					font-size: bkscale(@font-swatch8-font-size, 0.75);
 					line-height: bkscale(@font-swatch8-line-height, 0.85);
 				}
