--- a/stylesheet.less
+++ b/stylesheet.less
@@ -127,6 +127,9 @@ blockquote p {
 			width: 100%;
 			height: 100%;
 			text-align: center;
+			@media @tablet {
+				padding-bottom: 170px;
+			}
 
 			span.title,
 			span.description {
@@ -146,7 +149,7 @@ blockquote p {
 				line-height: 80px;
 				@media @tablet {
 					font-size: bkscale(@font-swatch8-font-size, 0.75);
-					line-height: bkscale(@font-swatch8-line-height, 0.85);
+					line-height: 64px;
 				}
 			}
 			span.description {
