Footer profile map fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -520,10 +520,6 @@ footer.template-footer {
 			}
 	}
 
-	.widget.map {
-		margin: 0 auto;
-	}
-
 
 	// Profile widget styles
 
@@ -543,6 +539,12 @@ footer.template-footer {
 		    	display: block;
 				margin-top: 20px;
 	    	}
+		}
+
+		.bk-profile-map {
+			width: 60%;
+			margin: 0 auto;
+			padding: 20px 0px;
 		}
 	}
 
