Footer profile widget second attempt

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -523,29 +523,10 @@ footer.template-footer {
 
 	// Profile widget styles
 
-	.widget.profile {
-		.bk-profile-phone {
-			&:before {
-	        content: '';
-	        background-image: image('/images/Phone.svg');
-	        background-size: 20px;
-	        background-repeat: no-repeat;
-	        float: left;
-	        width: 20px;
-	        height: 20px;
-	        padding-right: 8px;
-	    	}
-	    	@media @mobile {
-		    	display: block;
-				margin-top: 20px;
-	    	}
-		}
-
-		.bk-profile-map {
+	#page-zones__template-widgets__profile-footer-map {
 			width: 60%;
 			margin: 0 auto;
 			padding: 20px 0px;
-		}
 	}
 
 }
