--- a/stylesheet.less
+++ b/stylesheet.less
@@ -156,7 +156,8 @@ blockquote p {
 					line-height: 64px;
 				}
 				@media @mobile {
-					font-size: bkscale(@font-swatch8-font-size, 0.35);
+					font-size: bkscale(@font-swatch8-font-size, 0.55);
+					line-height: bkscale(@font-swatch9-line-height, 0.65);
 				}
 			}
 			span.description {
