--- a/stylesheet.less
+++ b/stylesheet.less
@@ -157,7 +157,7 @@ blockquote p {
 				}
 				@media @mobile {
 					font-size: bkscale(@font-swatch8-font-size, 0.55);
-					line-height: bkscale(@font-swatch1-line-height, 0.55);
+					line-height: @font-swatch1-line-height;
 				}
 			}
 			span.description {
