--- a/stylesheet.less
+++ b/stylesheet.less
@@ -323,7 +323,7 @@ blockquote p {
 // General nav positioning
 
 .nav {
-	float: right;
+	float: none;
 	width: 60%;
 	@media @tablet {
 		width: 100%;
@@ -354,7 +354,7 @@ blockquote p {
 // The mobile nav icon
 
 .widget .extendednavigation a.pull {
-	top: -30px;
+	top: 10px;
 	height: 30px;
 	width: 30px;
 	float: right;
