Removed stuck menu

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -297,12 +297,12 @@ blockquote p {
 	}
 
 
-	// Stuck menu styles
+	// // Stuck menu styles
 
-	&.stuckMenu.isStuck {
-	width: 100%;
-	z-index: 9999;
-	}
+	// &.stuckMenu.isStuck {
+	// width: 100%;
+	// z-index: 9999;
+	// }
 
 }
 
