Feature text line height fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -156,7 +156,7 @@ blockquote p {
 				line-height: 80px;
 				@media @tablet {
 					font-size: bkscale(@font-swatch8-font-size, 0.60);
-					line-height: 64px;
+					line-height: bkscale(@font-swatch9-line-height, 0.85);
 				}
 				@media @mobile {
 					font-size: bkscale(@font-swatch8-font-size, 0.50);
