--- a/stylesheet.less
+++ b/stylesheet.less
@@ -156,7 +156,7 @@ blockquote p {
 				line-height: 80px;
 				@media @tablet {
 					font-size: bkscale(@font-swatch8-font-size, 0.60);
-					line-height: bkscale(@font-swatch9-line-height, 0.95);
+					line-height: @font-swatch1-line-height;
 				}
 				@media @mobile {
 					font-size: bkscale(@font-swatch8-font-size, 0.50);
