Final template check fixes

--- a/css/blog.less
+++ b/css/blog.less
@@ -17,7 +17,7 @@
 }
 
 .blog-post-more-link {
-	margin-bottom: 10px;
+	margin: 10px 0;
 }
 
 .blog-post-feature-image-wrap {
@@ -163,10 +163,6 @@
 
 	}
 
-	label, input, button {
-		vertical-align: top;
-	}
-
 }
 
 
@@ -174,13 +170,4 @@
 
 .review-body {
 	color: @color-swatch4;
-}
-
-
-// Social Sharing
-
-.blog-post-sharing {
-	button.btn, button.btn:hover {
-		padding: 8px 18px 8px;
-	}
 }
